# rust-image-tools

./: .gitignore  CLAUDE.md  Cargo.toml  PLANNING.md  README.md  RESEARCH.md  ROADMAP.md  build.sh  bundle-sizes.md  package-lock.json  package.json
.claude/agents/: code-reviewer.md  fact-checker.md  implementer.md  orchestrator.md  planner.md  researcher.md
.claude/commands/: implement-review.md  start-plan.md  store-decision.md  store-plan.md  store-review.md
.claude/skills/: create-plan.md  fact-check.md  ship.md  start-plan.md  store-decision.md  store-resource.md  store-review.md
crates/image-converter/: Cargo.toml
crates/image-converter/benches/: conversion_bench.rs
crates/image-converter/src/: convert.rs  formats.rs  lib.rs  metadata.rs  processing.rs  transforms.rs
decisions/: 20260214-clippy-and-rustfmt-conventions.md  20260214-image-crate-over-image-convert.md  20260215-unit-test-file-placement.md  20260216-worker-flat-functions-over-class.md  20260227-astro-preact-islands-frontend-framework.md  20260305-researcher-agent-setup.md  20260318-generation-counter-over-worker-termination.md
plans/: 20260214-01-rust-crate-scaffold-and-format-detection.md  20260214-02-core-conversion-and-dimension-reading.md  20260214-03-rust-test-suite-expansion.md  20260214-04-frontend-scaffold-and-html-structure.md  20260214-05-web-worker-and-wasm-integration.md  20260214-06-ui-implementation.md  20260214-07-validation-error-handling-and-progress-bar.md  20260214-08-seo-optimization.md  20260214-09-posthog-analytics.md  20260214-10-integration-tests-playwright.md  20260214-11-rust-performance-benchmarks.md  20260219-12-posthog-feedback-form.md  20260221-13-webp-output-via-offscreen-canvas.md  20260227-14-astro-preact-migration.md  20260227-15-cyberpunk-design-update.md  20260301-16-tier-2-format-support.md  20260305-17-heic-image-support.md  20260309-18-seo-format-landing-pages.md  20260311-19-clipboard-paste-support.md  20260313-052638-jpeg-quality-slider-format-quality-controls.md  20260315-120000-compression-benchmark-format-comparison.md  20260316-120000-simple-image-transforms.md  20260318-23-seo-audit-improvements.md  20260319-24-image-metadata-exif-display.md  20260325-25-parameterized-image-processing.md
pr-reviews/: 20260228-plan-15-cyberpunk-design.md
research/: 20260305-112252-HEIC-image-support.md  20260306-seo-format-landing-pages.md  20260310-clipboard-paste-feature.md  20260312-112252-jpeg-quality-slider-format-quality-controls.md  20260315-120000-compression-benchmark-format-comparison.md  20260316-120000-simple-image-transforms.md  20260318-120000-seo-audit-and-improvements.md  20260319-155839-image-metadata-exif-display.md  20260325-120000-parameterized-image-processing.md
resources/: 20260215-rust-concepts-explained.md  20260215-rust-projects-for-learning-conventions.md  20260215-rust-vs-node-concepts.md  20260216-json-ld-structured-data-for-seo.md  20260216-web-workers-and-postmessage.md  20260217-gif-encoding-performance.md  20260218-cargo-bench-and-criterion.md  20260218-criterion-rust-benchmarking.md  20260218-e2e-testing-frameworks.md  20260218-native-vs-wasm-performance.md  20260219-static-hosting-providers.md  20260226-bundle-analysis-tools.md  20260226-comprehensive-codebase-overview.md  20260227-astro-preact-islands-architecture.md
scripts/: bundle-size.mjs
web/: .prettierignore  astro.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
web/.astro/: data-store.json  settings.json
web/src/: analytics.ts  constants.ts  index.html  main.ts  styles.css  types.ts  ui.ts  worker-types.ts  worker.ts
web/src/components/: BenchmarkTable.tsx  DropZone.tsx  EditPanel.tsx  FormatSelector.tsx  FormatTickerHeader.astro  ImageConverter.tsx  ImagePreview.tsx  MetadataModal.tsx  MetadataPanel.tsx  ProgressBar.tsx  ResultArea.tsx  Slider.tsx  TransformModal.tsx  TransformToolbar.tsx
web/src/data/: format-copy.d.ts  format-copy.json  format-pairs.ts
web/src/hooks/: useBenchmark.ts  useClipboardPaste.ts  useConverter.ts  useImageConverter.ts  useProcessing.ts  useWorker.ts
web/src/layouts/: Base.astro
web/src/lib/: heic.ts  image-converter.ts  quality.ts
web/src/pages/: [from]-to-[to].astro  index.astro
web/src/types/: enums.ts  index.ts  interfaces.ts  types.ts  window.d.ts
web/static/: robots.txt
web/tests/e2e/: clipboard.spec.ts  conversion.spec.ts  formats.spec.ts  landing-pages.spec.ts  metadata.spec.ts  quality.spec.ts  validation.spec.ts  worker.spec.ts
web/tests/fixtures/: sample.heic
web/tests/unit/: heic.test.ts  (+9 more)
(+9 files in other folders)
