[workspace]
members = ["crates/image-converter"]
resolver = "2"

[workspace.lints.clippy]
# Correctness
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Style & idioms
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
implicit_clone = "warn"
manual_string_new = "warn"
uninlined_format_args = "warn"

# Performance
large_futures = "warn"
inefficient_to_string = "warn"

[profile.release]
opt-level = "s"
lto = true
strip = true
