[workspace]
members = ["crates/image-converter"]
resolver = "2"

[workspace.lints.clippy]
# Correctness — deny (fail the build)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
lossy_float_literal = "deny"
as_conversions = "deny"

# Style & idioms — warn
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
implicit_clone = "warn"
manual_string_new = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
match_wildcard_for_single_variants = "warn"
redundant_else = "warn"
manual_let_else = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
trivially_copy_pass_by_ref = "warn"
ref_option_ref = "warn"
checked_conversions = "warn"

# Performance — warn
large_futures = "warn"
inefficient_to_string = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
opt-level = "s"
lto = true
strip = true
