# -- Package metadata --
[package]
name = "image-converter"
version = "0.1.0"
edition = "2021"               # Rust edition (controls language features and defaults)

# -- WASM-specific metadata --
[package.metadata.wasm-pack.profile.release]
wasm-opt = false               # Disable wasm-opt — bundled version doesn't support bulk memory ops

# -- Library output types --
[lib]
crate-type = [
    "cdylib",                  # C-compatible dynamic library — required by wasm-pack to produce .wasm
    "rlib",                    # Standard Rust library — required by cargo test to link unit tests
]

# -- Runtime dependencies --
[dependencies]
wasm-bindgen = "0.2"           # JS<->Rust FFI glue (provides #[wasm_bindgen] attribute)
serde = { version = "1", features = ["derive"] }  # Serialization framework (derive for #[derive(Serialize)])
serde-wasm-bindgen = "0.6"     # Converts Rust structs to JsValue via serde
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    # default-features = false disables rayon (multithreading) which breaks WASM.
    # Only the codecs listed here are compiled in, keeping the .wasm binary smaller.
] }

# -- Test-only dependencies (not included in the final .wasm binary) --
[dev-dependencies]
wasm-bindgen-test = "0.3"      # Test harness for running Rust tests in a headless browser via WASM
criterion = { version = "0.5", features = ["html_reports"] }  # Statistical benchmarking framework

# -- Benchmark configuration --
[[bench]]
name = "conversion_bench"
harness = false                # Use Criterion's own main function instead of the default test harness

# -- Lint rules inherited from the workspace root Cargo.toml --
[lints]
workspace = true
